--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,14 @@
         <jenkins.version>1.625.3</jenkins.version>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.jenkins-ci.plugins.workflow</groupId>
+            <artifactId>workflow-cps-global-lib</artifactId>
+            <version>2.9</version>
+        </dependency>
+    </dependencies>
+
     <repositories>
         <repository>
             <id>repo.jenkins-ci.org</id>
